--- a/EpamMVCPractice1/Views/Shared/_Layout.cshtml
+++ b/EpamMVCPractice1/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="right_sidebar">
                 <div>@Html.ActionLink("Главная", "Index", "Home")</div>
-                <div>@Html.ActionLink("Гостевая", "Guest", "Home")</div>
-                <div>@Html.ActionLink("Анкета", "Form", "Home")</div>
+                <div>@Html.ActionLink("Гостевая", "Index", "Comment")</div>
+                <div>@Html.ActionLink("Анкета", "Index", "Form")</div>
             </div>
         </div>
     </div>
